modif UUID generation